/**
 * Context Service Proto Definition
 *
 * Gateway sends: Context (agentConfig is empty)
 * Server returns: Context (agentConfig is populated)
 */

syntax = "proto3";

package photon.context;

// Context Service - Duplex flow
service ContextService {
  rpc ProcessContextStream (stream ContextRequest) returns (stream ContextResponse);
}

// Gateway -> Server request
message ContextRequest {
  string request_id = 1;
  optional string project_id = 2;
  ContextData context = 3;
}

// Server -> Gateway response
message ContextResponse {
  string request_id = 1;
  bool success = 2;
  optional string error = 3;
  optional ContextData context = 4;
}

// Context data structure
message ContextData {
  string scope = 1;
  User user = 2;
  map<string, States> states = 3;
  optional AgentConfig agent_config = 4;
}

// User information
message User {
  string id = 1;
  optional string photon = 2;
  optional string email = 3;
}

// State mapping (nested JSON structure)
message States {
  string json_data = 1;
}

// Agent configuration
message AgentConfig {
  string id = 1;
  repeated string instructions = 2;
} 